--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "numpy>=2.2.6",
     "python-dotenv>=1.2.1",
     "qdrant-client>=1.16.1",
+    "remodel>=1.0.0",
     "sentence-transformers>=5.1.2",
 ]
